# REViewer

./: .gitignore  CMakeLists.txt  COPYRIGHT.txt  Dockerfile  README.md
docs/: examples.md  method-overview.md  metrics.md
reviewer/: .clang-format  CMakeLists.txt
reviewer/app/: Aligns.cpp  Aligns.hh  CatalogLoading.cpp  CatalogLoading.hh  FragLenFilter.cpp  FragLenFilter.hh  GenerateSvg.cpp  GenerateSvg.hh  GenomicRegion.cpp  GenomicRegion.hh  GenotypePaths.cpp  GenotypePaths.hh  GraphBlueprint.cpp  GraphBlueprint.hh  HtsHelpers.cpp  HtsHelpers.hh  LanePlot.cpp  LanePlot.hh  LocusSpecDecoding.cpp  LocusSpecDecoding.hh  LocusSpecification.cpp  LocusSpecification.hh  Origin.cpp  Origin.hh  Phasing.cpp  Phasing.hh  Projection.cpp  Projection.hh  REViewer.cpp  Read.cpp  Read.hh  ReferenceContigInfo.cpp  RegionGraph.cpp  RegionGraph.hh  VariantSpecification.cpp  VariantSpecification.hh  Workflow.cpp  Workflow.hh
reviewer/core/: Aligns.cpp  Aligns.hh  GenomicRegion.cpp  GenomicRegion.hh  LocusSpecification.cpp  LocusSpecification.hh  Reference.cpp  Reference.hh  ReferenceContigInfo.hh  VariantSpecification.cpp  VariantSpecification.hh
reviewer/metrics/: Metrics.cpp  Metrics.hh  Workflow.cpp  Workflow.hh
reviewer/snps/: Workflow.cpp  Workflow.hh  WorkflowTest.cpp
reviewer/tests/: ExampleTest.cpp  UnitTests.cpp  UnitTests.hh  process_sanity_test_outputs.py  run_manual_sanity_tests.sh  sanity_test_outputs.html  tests
reviewer/tests/inputs/bamlets/: BEAN1_HG00684.bam  BEAN1_HG00684.bam.bai  BEAN1_HG01682.bam  BEAN1_HG01682.bam.bai  BEAN1_HG02561.bam  BEAN1_HG02561.bam.bai  BEAN1_HG03100.bam  BEAN1_HG03100.bam.bai  BEAN1_HG03121.bam  BEAN1_HG03121.bam.bai  JPH3_HG00277.bam  JPH3_HG00277.bam.bai  JPH3_HG03064.bam  JPH3_HG03064.bam.bai  JPH3_HG03306.bam  JPH3_HG03306.bam.bai  JPH3_HG03582.bam  JPH3_HG03582.bam.bai  TNRC6A_HG00683.bam  TNRC6A_HG00683.bam.bai  TNRC6A_HG01761.bam  TNRC6A_HG01761.bam.bai  TNRC6A_HG02772.bam  TNRC6A_HG02772.bam.bai  XYLT1_HG03246.bam  XYLT1_HG03246.bam.bai
reviewer/tests/inputs/catalogs/: stranger_variant_catalog_hg38_chr16.json
reviewer/tests/inputs/vcfs/: HG00277.vcf  HG00683.vcf  HG00684.vcf  HG01682.vcf  HG01761.vcf  HG02561.vcf  HG02772.vcf  HG03100.vcf  HG03121.vcf  HG03306.vcf  HG03582.vcf
reviewer/tests/outputs/images/: BEAN1_HG00684.metrics.tsv  BEAN1_HG00684.phasing.tsv  BEAN1_HG01682.metrics.tsv  BEAN1_HG01682.phasing.tsv  BEAN1_HG02561.metrics.tsv  BEAN1_HG02561.phasing.tsv  BEAN1_HG03100.metrics.tsv  BEAN1_HG03100.phasing.tsv  BEAN1_HG03121.metrics.tsv  BEAN1_HG03121.phasing.tsv  JPH3_HG00277.metrics.tsv  JPH3_HG00277.phasing.tsv  JPH3_HG03064.metrics.tsv  JPH3_HG03064.phasing.tsv  JPH3_HG03306.metrics.tsv  JPH3_HG03306.phasing.tsv  JPH3_HG03582.metrics.tsv  JPH3_HG03582.phasing.tsv  TNRC6A_HG00683.metrics.tsv  TNRC6A_HG00683.phasing.tsv  TNRC6A_HG01761.metrics.tsv  TNRC6A_HG01761.phasing.tsv  TNRC6A_HG02772.metrics.tsv  TNRC6A_HG02772.phasing.tsv  XYLT1_HG03246.metrics.tsv  XYLT1_HG03246.phasing.tsv
tests/inputs/bamlets/: BEAN1_HG01682.bam  BEAN1_HG03100.bam.bai  BEAN1_HG03121.bam  JPH3_HG00277.bam  JPH3_HG03306.bam  TNRC6A_HG00683.bam  TNRC6A_HG00683.bam.bai  TNRC6A_HG01761.bam  TNRC6A_HG02772.bam.bai  XYLT1_HG03246.bam.bai
tests/inputs/genomes/: HG38_chr16.fa.fai
tests/inputs/vcfs/: HG03064.vcf  HG03246.vcf
